--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">1week</string>
+    <string name="contact_text_name">이름</string>
+    <string name="contact_text_phoneNumber">전화번호</string>
 </resources>
